<resources>
    <string name="app_name">MyApp Portfolio</string>

    <string name="my_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="build_bigger">Build It Bigger</string>
    <string name="super_duo2">Library App</string>
    <string name="super_duo1">Scores App</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="button_launch">This button will launch my </string>
</resources>
