<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffdfeaf1"
    android:padding="8dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/my_title"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        style="@style/buttonStyle"
        android:id="@+id/button_spotify_streamer"
        android:layout_below="@id/textView"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="32dp"
        android:onClick="runSpotifyStreamer"
        android:text="@string/spotify_streamer" />

    <Button
        style="@style/buttonStyle"
        android:id="@+id/button_super_duo1"
        android:layout_below="@id/button_spotify_streamer"
        android:layout_margin="4dp"
        android:onClick="runSuperDuo1"
        android:text="@string/super_duo1" />


    <Button
        style="@style/buttonStyle"
        android:id="@+id/button_super_duo2"
        android:layout_below="@id/button_super_duo1"
        android:layout_margin="4dp"
        android:onClick="runSuperDuo2"
        android:text="@string/super_duo2" />


    <Button
        style="@style/buttonStyle"
        android:id="@+id/button_build_bigger"
        android:layout_below="@id/button_super_duo2"
        android:layout_margin="4dp"
        android:onClick="runBuildBigger"
        android:text="@string/build_bigger" />


    <Button
        style="@style/buttonStyle"
        android:id="@+id/button_xyz_reader"
        android:layout_below="@id/button_build_bigger"
        android:layout_margin="4dp"
        android:onClick="runXyzReader"
        android:text="@string/xyz_reader" />


    <Button
        style="@style/buttonStyle"
        android:id="@+id/button_capstone"
        android:layout_below="@id/button_xyz_reader"
        android:layout_margin="4dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="runCapstone"
        android:text="@string/capstone"
        android:textColor="@android:color/white" />


</RelativeLayout>
